Update .gitignore to exclude virtual environment, build artefacts and local and my personal files

--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,15 @@
-*.py[cod]
+# Created by venv; see https://docs.python.org/3/library/venv.html
 
-# C extensions
-*.so
+# Ignore virtual environment and local development artifacts
+/bin/
+/include/
+/lib/
+/lib64/
+/pyvenv.cfg
+/bashate.egg-info/
+/build/
 
-# Packages
-*.egg
-*.egg-info
-dist
-build
-eggs
-parts
-bin
-var
-sdist
-develop-eggs
-.installed.cfg
-lib
-lib64
-
-# Installer logs
-pip-log.txt
-
-# Unit test / coverage reports
-.coverage
-.tox
-nosetests.xml
-.stestr/
-cover/
-
-# Translations
-*.mo
-
-# Mr Developer
-.mr.developer.cfg
-.project
-.pydevproject
-
-# Complexity
-output/*.html
-output/*/index.html
-
-# Sphinx
-doc/build
-
-# pbr generates these
-AUTHORS
-ChangeLog
-
-# Editors
-*~
-.*.swp
+# Ignore Python compiled files
+__pycache__/
+*.pyc
+*.pyo
